tests/ui/server_send/error/trace_field-is-not-an-assignment-expression.stderr
warning: unused import: `abort_call_site`
 --> src/server_send/analyze.rs
  |
  | use proc_macro_error::{abort, abort_call_site};
  |                               ^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `FromMeta`
 --> src/server_send/parsed.rs
  |
  | use darling::{FromMeta};
  |               ^^^^^^^^

warning: field is never read: `level`
  --> src/server_send/parsed.rs
   |
   |     level: Option<String>,
   |     ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(dead_code)]` on by default

warning: field is never read: `name`
  --> src/server_send/parsed.rs
   |
   |     name: Option<String>,
   |     ^^^^^^^^^^^^^^^^^^^^

warning: field is never read: `skip`
  --> src/server_send/parsed.rs
   |
   |     skip: Option<String>,
   |     ^^^^^^^^^^^^^^^^^^^^

warning: field is never read: `fields`
  --> src/server_send/parsed.rs
   |
   |     fields: Option<String>,
   |     ^^^^^^^^^^^^^^^^^^^^^^

warning: associated function is never used: `skip_params`
  --> src/server_send/parsed.rs
   |
   |     fn skip_params(&self) -> Vec<String> {
   |        ^^^^^^^^^^^

warning: associated function is never used: `fields_params`
  --> src/server_send/parsed.rs
   |
   |     fn fields_params(&self) -> Vec<String> {
   |        ^^^^^^^^^^^^^

trace, "Server"
2
Args { vars: [Path(ExprPath { attrs: [], qself: None, path: Path { leading_colon: None, segments: [PathSegment { ident: Ident { ident: "trace", span: #0 bytes(58..63) }, arguments: None }] } }), Lit(ExprLit { attrs: [], lit: Str(LitStr { token: "Server" }) })] }
error: this attribute takes from one to four arguments

         = help: use `#[server_send(level=trace, name="Name", skip="a, b")]`

 --> tests/ui/server_send/error/trace_field-is-not-an-assignment-expression.rs:3:15
  |
3 | #[server_send(trace,"Server")]
  |               ^^^^^

error[E0425]: cannot find function `f` in this scope
 --> tests/ui/server_send/error/trace_field-is-not-an-assignment-expression.rs:7:13
  |
7 | fn main() { f() }
  |             ^ not found in this scope
